          Build.PL to generate Makefile/Build as well as MYMETA.{json,yml}. Then
          we read MYMETA. Perhaps this feature will come back as an optional
          plugin later, should there be any demand. BTW, Dist::Requires does
          this kind of functionality.

        - Also remove the feature that detects *.meta files, because these files
          are not present in a mini CPAN mirror.

        [DATABASE CHANGES]

        - Upgrade schema to v3: add columns
          has_{metayml,metajson,makefilepl,buildpl} to 'file' table.

        - Clear data for reindexing.

        [ENHANCEMENTS]

        - New subcommands: releases, mod2dist, mod2rel, dist2rel, distmods,
          authormods, authordists, authorrels.


0.05    2015-01-14 (PERLANCAR)

        - No functional changes.

        - Rebuild to update TODO.md (d'oh).


0.04    2015-01-14 (PERLANCAR)

        - Use Perinci::CmdLine::Util::Config to get lcpan configuration without
          running the binary.

        - Rebuild to update TODO.md.


0.03    2015-01-14 (PERLANCAR)

	- The indexer now tries to extract dist metadata from Makefile.PL or
          Build.PL in addition to from META.{json,yml}. This allows for more
          thorough indexing of dependencies information (as well as distribution
          name & abstract), as a lot of older releases do not include CPAN META
          files. But this also means actually executing the Makefile.PL &
          Build.PL scripts, which might have some side effects.

        - Add script: lcpanm.

        - Rename 'rev-deps' subcommand to 'rdeps'.

        - rdeps: Add options --author and --author-isnt to be able to filter by
          author. This allows you to, for example, see if a module is used by
          other authors instead of just herself.


0.02    2015-01-13 (PERLANCAR)

	- Rename module/dist from CPAN::Local to App::lcpan (PAUSE
	  conflict, CPAN::Local already exists on CPAN).


0.01    2015-01-13 (PERLANCAR)

        - First version.